src/tests/functionality/assignment_5_functions_headers/invalid_semantic/07_mandatory_forward_declaration_parameter_type_conflict.c
int f(int x);

int f(float x) {
    return 1;
}

int main() {
    return 0;
}
